--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: next@ncit.edu.np
 description: > # this means to ignore newlines until "baseurl:"
   Brewing Innovative Minds at NEXT 2019. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://next.aashishtiwari.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://next.ncit.edu.np" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 encoding: UTF-8
