--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,9 @@ collections:
   organizer:
     permalink: /organizer/
     output: true
+  announcement:
+    permalink: /announcement/:name/
+    output: true    
 plugins:
   - jekyll-feed
 exclude:
