Created faq page

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ collections:
   announcement:
     permalink: /announcement/:name/
     output: true    
+  faq:
+    output: true      
 plugins:
   - jekyll-feed
 exclude:
