--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Brewing Innovative Minds - NEXT 2019
 email: next@ncit.edu.np
 description: > # this means to ignore newlines until "baseurl:"
   Brewing Innovative Minds at NEXT 2019. 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/dev" # the subpath of your site, e.g. /blog
 url: "https://next.ncit.edu.np" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
